# ps3recomp

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md
docs/: FIRMWARE_LLE.md  PPU_RECOMP.md  PROTO_BUILDS.md  RSX_FRAGMENT_PROGRAM.md  SPU_FALLBACK.md  broad-testing-findings.md  cross-platform-candidates.md  rsxfifo.txt
fw_spu/: libadec.prx  libat3dec.prx  libatrac3multi.prx  libatrac3plus.prx  libatxdec.prx  libsre.prx
fw_spu/cri_job_lifted/: spu_recomp.c  spu_recomp.h
fw_spu/cri_job_lifted_v2/: spu_recomp.c  spu_recomp.h
fw_spu/spu_at3dec/auto/: spu_recomp.c  spu_recomp.h
fw_spu/spu_at3dec/lifted/: spu_recomp.c  spu_recomp.h
fw_spu/spu_libsre/kernel_lifted2/: spu_recomp.c  spu_recomp.h
fw_spu/spu_libsre/lifted/: spu_recomp.c  spu_recomp.h
fw_spu/spu_libsre/lifted_v2/: spu_recomp.c
fw_spu/spu_libsre/policy_A00_lifted/: spu_recomp.c  spu_recomp.h
fw_spu/spu_libsre/policy_lifted/: spu_recomp.c
fw_spu/spu_libsre/policy_lifted2/: spu_recomp.c  spu_recomp.h
include/ps3emu/: spu_fallback.h
libs/audio/: cellAudio.c
libs/codec/: cellPamf.c  cellPamf.h  cellSail.c  cellSail.h
libs/filesystem/: cellFs.c  cellFs.h
libs/hardware/: cellCamera.c  cellCamera.h  cellGem.h
libs/input/: cellPad.c
libs/misc/: cellAvconfExt.c
libs/network/: cellHttp.c  cellHttp.h  cellHttpUtil.c  cellHttpUtil.h  cellHttps.c  cellHttps.h  cellNet.c  cellNet.h  cellNetCtl.c  cellNetCtl.h  cellSsl.c  cellSsl.h  sceNpBasic.c  sceNpTrophy.c  sceNpTrophy.h  sysNet.c  sysNet.h
libs/spurs/: cellSpurs.c  cellSpurs.h  spurs_pm.c  spurs_taskset.c  spurs_taskset.h
libs/sync/: cellSync2.c  cellSync2.h
libs/system/: cellGame.c  cellGame.h  cellRtc.c  cellSaveData.c  cellSaveData.h  cellSysmodule.c  cellSysmodule.h  cellSysutil.c  sysPrxForUser.c
libs/video/: cellGcmSys.c  cellGcmSys.h  cellVideoOut.c  cellVideoOut.h  rsx_commands.c  rsx_commands.h  rsx_d3d12_backend.c  rsx_fp_decompiler.c  rsx_fp_decompiler.h  rsx_vp_decompiler.c  rsx_vp_decompiler.h
libs/video/tests/: rsx_harness_main.c  test_fp_decompiler.c  test_rsx_fifo.c  validate_fp_shaders.c  validate_vp_decode.c  validate_vp_shaders.c
runtime/host/: host_main.c
runtime/ppu/: ppu_fs.cpp  ppu_hle.cpp  ppu_loader.cpp  ppu_sysprx.cpp
runtime/ppu/tests/: boot_main.cpp  test_hle.cpp  test_hle_integration.cpp  test_loader.cpp
runtime/prx/: prx_loader.c  prx_loader.h
runtime/prx/tests/: libsre_externs_stub.cpp  test_prx_loader.cpp
runtime/spu/: spu_channels.c  spu_context.h  spu_dma.h  spu_helpers.h  spu_lifted_job.h  spu_tsp_weak.c  spu_workload.c  spu_workload.h
runtime/spu/tests/: gen_test_adapter.py  test_adapter_main.c  test_spu_helpers.c  test_workload_image.h
runtime/spu/tests/out_adapter/: spu_recomp.c  spu_recomp.h
runtime/spu/tests/out_bringup/: spu_recomp.c
runtime/spu/tests/out_event/: spu_recomp.c
runtime/spu/tests/out_lfqueue/: spu_recomp.c
runtime/spu/tests/out_taskset/: spu_recomp.c
runtime/spu/tests/out_workload/: spu_recomp.c
runtime/syscalls/: lv2_register.c  lv2_syscall_table.h  spu_lifted_fallback.c  sys_cond.c  sys_event.c  sys_event.h  sys_fs.c  sys_memory.c  sys_memory.h  sys_mutex.c  sys_ppu_thread.c  sys_rwlock.c  sys_rwlock.h  sys_semaphore.c  sys_timer.c  sys_timer.h
scratch/: ppu_conformance_run.bat
tests/: .gitignore  run_torture.py
tests/guest/: gen_vectors.py  smoke.c  torture.c  torture.h  torture_c.c  torture_mem.c
tests/sync_stress/: CMakeLists.txt  main.c
tests/torture/: CMakeLists.txt  build.bat  main.cpp
tools/: disasm_audit.py  disasm_audit_operands.py  disasm_audit_operands_whitelist.txt  dwarf_abi.py  dwarf_common.py  dwarf_line.py  elf_parser.py  elf_symbols.py  endian_audit.py  endian_audit_whitelist.txt  find_functions.py  gen_hle_nids.py  hle_abi_audit.py  hle_abi_audit_whitelist.txt  hle_dispatch_classify.py  inject_spcheck.py  instrument_kernel.py  instrument_policy.py  lift_audit.py  lift_prx.py  lift_selftest.py  nid_database.py  nid_from_protos.json  nid_harvest.py  objdump_audit.py  pkg_extract.py  ppu_disasm.py  ppu_lifter.py  ppu_loader.py  prx_exports.py  prx_relocate.py  spbalance.py  spu_disasm.py  spu_disasm_audit.py  spu_disasm_audit_operands.py  spu_disasm_audit_operands_whitelist.txt  spu_ident.py  spu_lift_selftest.py  spu_lifter.py  stderr_revert2.txt  (+9 more)
tools/compare/: README.md  compare_report.py  ida_export_units.py  ingest_native.py  match_functions.py  run_compare.py  schema.py  selftest.py  xex_parser.py
tools/compare/ghidra/: ExportCompareUnits.java
tools/harness/: README.md  ps3_recomp_harness.py
tools/rpcs3_probe/: bp_test.py  diag.py  diag_oracle.py  diag_oracle2.py  oracle_006CEAA0.py  probe.py  rsp.py  snap_addrs.py  snap_singleton.py  trace.py
wave/: main.cpp
